--- a/templates/about.html
+++ b/templates/about.html
@@ -2,9 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="../static/about.css" rel="stylesheet">
     <title></title>
   </head>
+  <header>
+  	<ul>
+	  <li><a href="main.html">Головна</a></li>
+	  <li><a href="information.html">Інформація по темі</a></li>
+	  <li><a href="history.html">Історична Довідка</a></li>
+	  <li><a href="facts.html.html">Цікаві факти</a></li>
+	  <li><a href="about.html">Про Нас</a></li>
+	</ul>
+  </header>
   <body>
-
+	
   </body>
 </html>
