--- a/templates/about.html
+++ b/templates/about.html
@@ -2,9 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../static/about.css">
     <title></title>
   </head>
   <body>
 
   </body>
+  <footer>
+    <div class="footer">
+      <p>© Всі права захищено</p>
+      <p>Юра Остапович</p>
+
+    </div>
+  </footer>
 </html>
