--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../static/about.css">
+        <link rel="stylesheet" href="../static/general.css">
+        <link rel="stylesheet" href="../static/about.css">
+        
     <title></title>
   </head>
   <header>
@@ -10,7 +12,7 @@
 	  <li><a href="main.html">Головна</a></li>
 	  <li><a href="information.html">Інформація по темі</a></li>
 	  <li><a href="history.html">Історична Довідка</a></li>
-	  <li><a href="facts.html.html">Цікаві факти</a></li>
+	  <li><a href="facts.html">Цікаві факти</a></li>
 	  <li><a href="about.html">Про Нас</a></li>
 	</ul>
   </header>
