--- a/templates/history.html
+++ b/templates/history.html
@@ -2,10 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+        <link rel="stylesheet" href="../static/general.css">
+        <link rel="stylesheet" href="../static/history.css">
+        
     <title></title>
   </head>
+  <header>
+  	<ul>
+	  <li><a href="main.html">Головна</a></li>
+	  <li><a href="information.html">Інформація по темі</a></li>
+	  <li><a href="history.html">Історична Довідка</a></li>
+	  <li><a href="facts.html">Цікаві факти</a></li>
+	  <li><a href="about.html">Про Нас</a></li>
+	</ul>
+  </header>
   <body>
-
+	
   </body>
-  
+  <footer>
+    <div class="footer">
+      <p>© Всі права захищено</p>
+      <p>Юра Остапович</p>
+
+    </div>
+  </footer>
 </html>
