--- a/static/general.css
+++ b/static/general.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+
+body{
+    font-family: 'Ubuntu', sans-serif;
+}
+
 html{
     background-color: #333;
 }
@@ -7,6 +13,7 @@ header{
     padding-bottom: 3%;
     width: 100%;
 }
+
 ul {
     list-style-type: none;
     margin: -1%;
