--- a/static/general.css
+++ b/static/general.css
@@ -6,6 +6,7 @@ body{
 
 html{
     background-color: #333;
+    margin: 0;
 }
 
 header{
@@ -37,21 +38,16 @@ li a {
 
 li a:hover {
     background-color: #111;
-    transition: 1s;    
-}
-
-.footer {
-    background-color: #333;
-    color: white;
+    transition: 2s;
 }
 
 footer {
-    position: absolute;
-    background-color: gray;
-    text-align: center;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height:0;
-    margin: auto;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+  text-align: center;
+
 }
