Information page ready

--- a/templates/information.html
+++ b/templates/information.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
         <link rel="stylesheet" href="../static/general.css">
         <link rel="stylesheet" href="../static/information.css">
-        
+
     <title></title>
   </head>
   <header>
@@ -16,9 +16,75 @@
 	  <li><a href="about.html">Про Нас</a></li>
 	</ul>
   </header>
-  <body>
-	
-  </body>
+  <main>
+
+	<div class="container"> <!-- EPAM -->
+    <div class="left-part">
+      <div class="first-block-header">
+        <h2><a href="https://careers.epam.ua/" style="text-decoration: none; color="> EPAM </a></h2>
+      </div>
+      <div class="first-block-content">
+        <p>‌Світова організація, яка обслуговує клієнтів в 25 країнах Північної Америки, Європи, Азії та Австралії. Epam є визнаним лідером на ринку в декількох категоріях серед провідних технологічних агенств світу і одна лише з чотирьох технологічних компаній, які потрапили в список Форбс.</p>
+        <p>За три місяці роботи команда волонтерів ЕРАМ у партнерстві з Міністерством створила перший у країні мобільний застосунок для оцифрування державних послуг. Так, наразі у «Дія» реалізовано можливість завантаження на смартфон цифрових копій таких документів, як посвідчення водія та свідоцтво про реєстрацію транспортного засобу, які містяться у державних реєстрах Міністерства внутрішніх справ.</p>
+        <p>Особливу увагу розробники приділили захисту персональних даних: авторизація здійснюється через BankID, сам застосунок побудовано відповідно до кращих практик індустрії, усі дані передаються та зберігаються на смартфоні користувача виключно у зашифрованому вигляді, посилена процедура автентифікації між додатком та сервером. Слід зазначити, що дані користувачів не зберігаються на сторонніх сховищах, а передаються транзитом через захищений хмарний сервер. Сервери EPAM для роботи «Дія» не використовуються. Для виявленя потенційних вразливостей мобільний додаток і його серверна частина пройшли кілька етапів перевірок, у тому числі тест на проникнення. </p>
+        <p>Усього з боку EPAM до проєкту було залучено близько 35 спеціалістів-волонтерів, які працювали над «Дія» у вільний від основних проєктів час. Серед них: архітектори, інженери, тестувальники, аналітики, фахівці з кібер-безпеки. З кожним із волонтерів було підписано угоду про нерозголошення інформації.</p>
+      </div>
+    </div>
+    <div class="right-part">
+      <div class="second-block-header">
+        <h2>Location</h2>
+      </div>
+      <div class="second-block-content">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26689.811004112496!2d23.9874058772888!3d49.850308108795424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add9b6a54e3bd%3A0x3628c3b0b374b775!2sEPAM%20Systems!5e0!3m2!1sen!2sua!4v1590149942309!5m2!1sen!2sua" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+
+    </div>
+  </div>
+  <div class="container"> <!-- SoftServe -->
+    <div class="right-part">
+        <div class="first-block-header">
+          <h2>SoftServe</h2>
+        </div>
+        <div class="first-block-content">
+          <p>Перший офіс компанії SoftServe, яка займалася програмним забезпеченням, відкрили у Львові ще в 1993-му році. Молода, амбітна львівська компанія, яка ще не мала далекоглядної стратегії розвитку, поступово стала відомою на весь світ. А все тому, що у SoftServe вчасно зрозуміли – на глобальному ринку і мислити потрібно глобально.</p>
+          <p>Відтак згодом з’явилися перші офіси компанії в Америці, а віднедавна SoftServe активно розвиває свою мережу представництв у Європі. Про принципи роботи з американськими та європейськими клієнтами, єдині корпоративні стандарти у всіх офісах компанії, конкуренцію на IT-ринку й те, як компанія «не відпускає» своїх кваліфікованих працівників розповів Tvoemisto.tv співзасновник та член ради директорів SoftServe Тарас Кицмей.</p>
+          <p>Першим клієнтом SoftServe стала  компанія «General Electric», над замовним проектом якої працювало всього декілька людей. З часом SoftServe почав набирати обертів, поглиблювати експертизу, розробляти власні проекти та самостійно шукати клієнтів. У 2000-му році компанія відкрила свій перший офіс у Вашингтоні, згодом представництва з’явились у Бостоні, Каліфорнії, Нью-Йорку, Флориді.</p>
+          <p>У Європі офіси компанії знаходяться у Великобританії, Німеччині, Нідерландах. Більшість розробницьких офісів SoftServe розташовані в Україні, проте за останні кілька років такі осередки з'явились також у Польщі та Болгарії.</p>
+          <p>Ведення бізнесу в офісах Європи і Америки не відрізняється від принципів, що існують у львівських офісах, адже SoftServe – це глобальна компанія. Торік компанія відкрила новий офіс у Вроцлаві, який дуже подібний до львівського і належить до третьої генерації офісів SoftServe. «Усе, що ми робимо – однакове,  – каже Тарас Кицмей. – Попри те, що офіси пережили декілька генерацій, принцип роботи скрізь єдиний. Світ стає глобальним, і в ньому стираються національні особливості бізнесу.  Всюди вимагають єдиного стандарту і це стосується не лише специфіки будівництва офісів, але й процесів розвитку людей у компанії та співпраці з клієнтами».</p>
+        </div>
+      </div>
+    <div class="left-part">
+        <div class="second-block-header">
+          <h2>Location</h2>
+        </div>
+        <div class="second-block-content">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3708.0894955479584!2d24.710821889437142!3d48.9151021308021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4730c1419a5e4045%3A0xd22c0c1c9b658267!2sSoftServe%20Ivano-Frankivsk!5e0!3m2!1sen!2sua!4v1590152161782!5m2!1sen!2sua" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+
+      </div>
+  </div>
+  <div class="container"> <!-- GlobalLogic-->
+    <div class="left-part">
+      <div class="first-block-header">
+        <h2>GlobalLogic</h2>
+      </div>
+      <div class="first-block-content">
+        <p>GlobalLogic — лідер у сфері послуг із розробки цифрових продуктів. Ми допомагаємо нашим клієнтам проектувати і створювати інноваційні продукти, платформи і цифрові рішення для сучасного світу. Поєднуючи стратегічний дизайн, комплексний інжиніринг і експертизу у різних галузях, ми допомагаємо нашим клієнтам вийти на нові рівні можливого і прискорити їхній перехід до цифрового бізнесу майбутнього.</p>
+        <p>‌Майже 20 років GlobalLogic співпрацює з компаніями усіх основних галузей для створення унікальних продуктів, поєднання людей, рішень і можливостей для бізнесу. Сьогодні, коли світ стає все більш цифровим, ставить споживача в центр кожної взаємодії, ми показуємо бізнесу, як їм краще залучати споживачів, впроваджувати інновації в межах закладених бюджетів та виводити наступне покоління цифрових продуктів і послуг на ринок у найкоротший можливий час.</p>
+        <p>GlobalLogic допомагає брендам створювати цінність протягом життєвого циклу продукту - не лише розвиваючи передові технології, але й допомагаючи перетворити раніше випущені продукти на більш релевантні для досвідчених користувачів цифрових технологій. Використовуючи методи проектування, орієнтовані на людину, висококласні інженерні навички та професійний підхід – ми допомагаємо нашим клієнтам переосмислити свій бізнес та взаємодію продуктів, розробити інноваційний продукт та послугу скоротивши термін виведення продукту на ринок.</p>
+        <p>Центральний офіс GlobalLogic знаходиться у Кремнієвій долині у США, а інжинірингові та дизайн-центри розташовані по всьому світу. Ми ділимося нашою глибокою експертизою з клієнтами у сферах комунікацій, автопрому, охорони здоров’я, технологій, медіа і розваг, промисловості і напівпровідників.
+      </div>
+    </div>
+    <div class="right-part">
+      <div class="second-block-header">
+        <h2>Location</h2>
+      </div>
+      <div class="second-block-content">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20007.63430765!2d24.019764287901598!3d49.81919514627351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ae7bbf9adf7ef%3A0x685f5501a748f1e!2sGlobalLogic!5e0!3m2!1sen!2sua!4v1590153228969!5m2!1sen!2sua" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>      </div>
+
+    </div>
+    </div>
+  </main>
   <footer>
     <div class="footer">
       <p>© Всі права захищено</p>
