--- a/static/general.css
+++ b/static/general.css
@@ -51,3 +51,21 @@ footer {
   text-align: center;
 
 }
+
+.link:link {
+  text-decoration: none;
+  color: white;
+}
+
+.link:visited {
+  text-decoration: none;
+  color: white;
+}
+
+.link:hover {
+  text-decoration: underline;
+  color: white;
+}
+
+
+
