--- a/templates/information.html
+++ b/templates/information.html
@@ -21,7 +21,7 @@
 	<div class="container"> <!-- EPAM -->
     <div class="left-part">
       <div class="first-block-header">
-        <h2><a href="https://careers.epam.ua/" style="text-decoration: none; color="> EPAM </a></h2>
+        <h2><a class="link" href="https://careers.epam.ua/"> EPAM </a></h2>
       </div>
       <div class="first-block-content">
         <p>‌Світова організація, яка обслуговує клієнтів в 25 країнах Північної Америки, Європи, Азії та Австралії. Epam є визнаним лідером на ринку в декількох категоріях серед провідних технологічних агенств світу і одна лише з чотирьох технологічних компаній, які потрапили в список Форбс.</p>
