--- a/static/information.css
+++ b/static/information.css
@@ -2,21 +2,17 @@ main{
   padding:1%;
 }
 .container{
-  padding-bottom: 30%;
-  height: auto;
+  padding-bottom: 5%;
+  height: 500px;
 }
 .first-block-header{
   text-align: center;
-  text-decoration: none !important;
-  color: white !important;
 }
-
-
 .second-block-header{
   text-align: center;
 }
 .second-block-content{
-  height: 400px;
+  height: 100%;
 }
 .left-part{
   float: left;
@@ -29,7 +25,7 @@ main{
 .right-part{
   float: right;
   color: white;
-  max-height: 700px;
+/*  max-height: 700px;*/
   height: 100%;
   max-width: 1000px;
   width: 50%;
