--- a/static/general.css
+++ b/static/general.css
@@ -2,6 +2,7 @@
 
 body{
     font-family: 'Ubuntu', sans-serif;
+    color: white;
 }
 
 html{
@@ -11,8 +12,9 @@ html{
 
 header{
     padding-top: 0;
-    padding-bottom: 3%;
     width: 100%;
+    height: 50px;
+    font-size: 100%;
 }
 
 ul {
