--- a/templates/main.html
+++ b/templates/main.html
@@ -16,9 +16,16 @@
 	  <li><a href="about.html">Про Нас</a></li>
 	</ul>
   </header>
-  <body>
-	
-  </body>
+  <main>
+    <p class="epigraph"><i>Епіграф</i></p>
+    <div class="banner-image">
+      <div class="banner-text">
+        <h1>Історія розвитку IT в Україні</h1>
+        <p>Пишаємось, що українське</p>
+      </div>
+    </div>
+    <p>Синопсис</p>
+  </main>
   <footer>
     <div class="footer">
       <p>© Всі права захищено</p>
