Adding facts page and small changes

--- a/templates/facts.html
+++ b/templates/facts.html
@@ -17,7 +17,76 @@
 	</ul>
   </header>
   <body>
-
+    <div class="container"> <!-- Facts -->
+      <div class="left-part">
+        <div class="first-block-header">
+          <h2>Освіта</h2>
+        </div>
+        <div class="first-block-content">
+          <p> Освіта визначає експерта в будь-якій галузі. Ще від часів Радянського Союзу Україна славилась своєю сильною науковою школою. Список українських науковців містить математиків, фізиків, інформатиків і кібернетиків, винахідників тощо. Серед них ми бачимо імена світового значення, такі як Володимир Вернадський, Борис Грабовський, Володимир Джус, Архип Люлька, Іван Пулюй та Сергій Корольов. З часів здобуття Україною незалежності у 1991 році українські школярі регулярно беруть участь у міжнародних наукових олімпіадах з математики, фізики, інформатики та інших наук. І вони завжди повертаються з медалями.</p>
+          <p>Українська освіта змінюється відповідно до вимог ринку. Багато вишів почали пропонувати ІТ спеціалізацію. Високий рівень української ІТ освіти неодноразово було доведено. Наприклад, серед сертифікованих на Brainbench (Bench Games Leaderboard) Україна займає 3-тє місце за кількістю громадян, що мають ІТ-сертифікати, і 2-ге місце за кількістю громадян, що мають сертифікацію рівня MASTER LEVEL.</p>
+          <p>Згідно з результатами дослідження ”Портрет ІТ-спеціаліста 2020” на DOU, 64% українських спеціалістів мають вищу освіту та закінчили технічні інститути і університети.</p>
+          <p>Коли мова йде про освіту, має сенс згадати також про рівень IQ. Терміни “освіта” та “IQ” істотно різняться. Освіта – це знання, отримані у процесі навчання протягом певного часу, тоді як IQ є показником пізнавальної здібності людини, тобто інтелекту. Неосвічена людина може мати високий рівень IQ, в той час як освічена людина може отримати низький показник IQ. Проте дослідження показали, що якість освіти, яку отримала людина, грає значну роль при обчисленнях результатів IQ тесту.</p>
+        </div>
+      </div>
+      <div class="right-part">
+        <div class="second-block-content">
+          <img src="https://s.dou.ua/storage-files/essence1.png" alt="https://s.dou.ua/storage-files/essence1.png">
+        </div>
+      </div>
+    </div>
+    <div class="container"> <!-- Facts2 -->
+      <div class="left-part">
+        <div class="first-block-content";>
+          <p> На додаток до гарної освіти, український ІТ спеціаліст переважно продовжує свою самоосвіту і особистісний розвиток через навчання і отримання сертифікації по технологіям, що використовуються в проектах. Багато розробників розширяють свою базу знань за допомогою ІТ спільнот, курсів та центрів сертифікації. Згідно з ”Портретом ІТ-спеціаліста 2015”, майже 81% респондентів зазначили, що вони займаються самоосвітою, а 16% відвідують тренінги:.</p>
+          <p>Проте, це прагнення до саморозвитку – палиця на два кінці: українські ІТ спеціалісти люблять покращувати свою кваліфікацію, але не хочуть працювати на проектах або в командах, де вони не здобудуть новий досвід. Іноді виникають проблеми через те, що висококваліфікований розробник залишає проект, тому що він не цікавий або не дає йому нових знань.</p>
+          <p>Отже, ми бачимо, що передача знань широко розповсюджена  в Україні. Багато ІТ компаній організовують курси, практику, тренінги, стажування, академії та зустрічі, на яких найбільш досвідчені інженери діляться досвідом як з початківцями, так і з кваліфікованими ІТ спеціалістами.</p>
+          </div>
+      </div>
+      <div class="right-part">
+        <div class="second-block-content">
+          <img src="https://s.dou.ua/storage-files/essence30.png" alt="https://s.dou.ua/storage-files/essence30.png">
+        </div>
+      </div>
+    </div>
+    <div class="container"> <!-- Salary-->
+      <div class="left-part">
+        <div class="first-block-header">
+          <h2>Зарплата</h2>
+        </div>
+        <div class="first-block-content">
+          <p> Одна з причин появи аутсорсу - це грошові переваги, що з’являються. Україна є однією з країн з найменшими зарплатами. Тим не менше, відчуваючи запит на свій досвід, український розробник підвищує свої вимоги щодо зарплатні. Порівняно з середніми зарплатами по країні, зарплати ІТ розробників доволі високі. Завдяки цьому українські розробники можуть витрачати більше на освіту, особистий розвиток, здоров’я і подорожі.</p>
+          <p>Аутсорс - це ефективна стратегія, що дозволяє заощаджувати. Проте, у зв’язку з тим, що зарплати українських розробників постійно підвищуються, вони вже не завжди конкурентоздатні</p>
+          <p>До того ж, український ІТ спеціаліст дуже прискіпливий щодо умов праці і менеджменту команди. Він хоче працювати в сучасному офісі, отримувати регулярні бонусні виплати, мати дружнє робоче середовище і може залишити компанію або проект, якщо не почувається там комфортно. Український розробник не хоче терпіти будь-які незручності.</p>
+          </div>
+      </div>
+      <div class="right-part">
+        <div class="second-block-content">
+          <img src="https://s.dou.ua/storage-files/essence6.png" alt="https://s.dou.ua/storage-files/essence6.png">
+        </div>
+      </div>
+    </div>
+    <div class="container"> <!-- Audio-video -->
+      <div class="left-part">
+        <div class="first-block-header">
+          <h2>Різне</h2>
+        </div>
+        <div class="first-block-content">
+          <p></p>
+          <p></p>
+          <p>Зацікавленість також дуже важлива для українського програміста. Багато українських розробників мають власні проекти, а деякі створюють програмне забезпечення на добровольчих засадах. Доволі часто в новинах повідомляється про те, що українські програмісти розробили ПЗ, яке допоможе українським військовим, запобігатиме корупції, сприятиме розвитку українських шкіл тощо; в багатьох випадках ці програми передаються для користування безоплатно. До того ж часто можна зустріти розробників, які готові перейти з нудного проекту на складний, навіть якщо за нього менше платять.</p>
+            <p>А також звуки клавіатури:</p>
+            <audio controls>
+              <source src="../img/keyboard.mp3" >
+            </audio>
+        </div>
+      </div>
+      <div class="right-part">
+        <div class="second-block-content">
+          <iframe width="690" height="360" src="https://www.youtube.com/embed/Am_F9r_BiNI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
   </body>
   <footer>
     <div class="footer">
