--- a/templates/information.html
+++ b/templates/information.html
@@ -43,7 +43,7 @@
   <div class="container"> <!-- SoftServe -->
     <div class="right-part">
         <div class="first-block-header">
-          <h2>SoftServe</h2>
+          <h2><a class="link" href="https://www.softserveinc.com/en-us">SoftServe</a></h2>
         </div>
         <div class="first-block-content">
           <p>Перший офіс компанії SoftServe, яка займалася програмним забезпеченням, відкрили у Львові ще в 1993-му році. Молода, амбітна львівська компанія, яка ще не мала далекоглядної стратегії розвитку, поступово стала відомою на весь світ. А все тому, що у SoftServe вчасно зрозуміли – на глобальному ринку і мислити потрібно глобально.</p>
@@ -66,7 +66,7 @@
   <div class="container"> <!-- GlobalLogic-->
     <div class="left-part">
       <div class="first-block-header">
-        <h2>GlobalLogic</h2>
+        <h2><a class="link" href="https://www.globallogic.com/ua/">GlobalLogic</a></h2>
       </div>
       <div class="first-block-content">
         <p>GlobalLogic — лідер у сфері послуг із розробки цифрових продуктів. Ми допомагаємо нашим клієнтам проектувати і створювати інноваційні продукти, платформи і цифрові рішення для сучасного світу. Поєднуючи стратегічний дизайн, комплексний інжиніринг і експертизу у різних галузях, ми допомагаємо нашим клієнтам вийти на нові рівні можливого і прискорити їхній перехід до цифрового бізнесу майбутнього.</p>
