Finished Main, added titles. ver. 1.0

--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../static/general.css">
         <link rel="stylesheet" href="../static/about.css">
         
-    <title></title>
+    <title>Про Нас</title>
   </head>
   <header>
   	<ul>
@@ -25,9 +25,7 @@
 				<p>Дата народження: 04.06.2004</p>
 				<p>Місце народження: Івано-Франківськ, Україна</p>
 				<p>Освіта: СШ №5</p>
-                <p>Practice: School camp translator
-                There is a special camp in the end of each studying year in our school. It was created to improve student`s  skills in communicating with native English speakers. A group of American volunteers spend a week with pupils from different grades. Two years suborder I worked as a personal translator.</p> 
-                <p>Additional skills: Since 2013 I am a proud owner of personal computer and I am convinced that I am keen on modern technologies. I have experience in working with Windows OS, Macs, a bunch of linux systems(mostly Ubuntu), Android and mobile version of Windows. During this 5 years I earned a huge amount of knowledge about Operation Systems and how they work. I get used to solve software troubles by myself.</p>
+                <p>Навчаюся в спеціалізованій школі з поглибленим вивченням німецької мови №5. З хоббі займаюся спортивно-бальними танцями, акторською майстерністю і волейболом. В майбутньому хочу зв'язати свої знання з іноземних мов із своїм хоббі і стати тренером з танців закордоном. Хореографією займаюся 9 років,  акторською майстерністю 3 роки, волейболом 2 роки.</p>
 	</section>
   </body>
   <footer>
