--- a/templates/history.html
+++ b/templates/history.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../static/general.css">
         <link rel="stylesheet" href="../static/history.css">
 
-    <title></title>
+    <title>Історична Довідка</title>
   </head>
   <header>
   	<ul>
