--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../static/general.css">
         <link rel="stylesheet" href="../static/main.css">
         
-    <title></title>
+    <title>Головна</title>
   </head>
   <header>
   	<ul>
@@ -17,14 +17,24 @@
 	</ul>
   </header>
   <main>
-    <p class="epigraph"><i>Епіграф</i></p>
+    <div class="epigraph"><i>«Якщо щось працює - то не чіпай це»</i></div>
+
+
     <div class="banner-image">
       <div class="banner-text">
         <h1>Історія розвитку IT в Україні</h1>
         <p>Пишаємось, що українське</p>
       </div>
     </div>
-    <p>Синопсис</p>
+
+
+    <div class="sinopsis">
+
+      <p>Тут ви дізнаєтесь як розвивались ІТ-технології в Україні</p>
+      <p><img src="../img/sinopsis.gif"></p>
+
+    </div>
+
   </main>
   <footer>
     <div class="footer">
