--- a/static/main.css
+++ b/static/main.css
@@ -14,6 +14,7 @@ main{
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  width: 100%;
 }
 
 .banner-text {
@@ -25,4 +26,14 @@ main{
   color: white;
 }
 
+.epigraph{
+  text-align: right;
+  padding-right: 3%;
+  padding-bottom:10px;
+}
 
+.sinopsis{
+  text-align: center;
+  display: inline-block;
+  width: 100%
+}
