--- a/templates/facts.html
+++ b/templates/facts.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../static/general.css">
         <link rel="stylesheet" href="../static/facts.css">
 
-    <title></title>
+    <title>Цікаві факти</title>
   </head>
   <header>
   	<ul>
