--- a/templates/information.html
+++ b/templates/information.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../static/general.css">
         <link rel="stylesheet" href="../static/information.css">
 
-    <title></title>
+    <title>Інформація по темі</title>
   </head>
   <header>
   	<ul>
